--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Namaste Javascript 😁❤</h1>
 
     <!-- <script src="01_function.js"></script> -->
-    <script src="02_short_js_program.js"></script>
+    <!-- <script src="02_short_js_program.js"></script> -->
+    <script src="03_undefined_notdefined.js"></script>
 </body>
 </html>
