scope chain and lexical environment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- <script src="01_function.js"></script> -->
     <!-- <script src="02_short_js_program.js"></script> -->
-    <script src="03_undefined_notdefined.js"></script>
+    <!-- <script src="03_undefined_notdefined.js"></script> -->
+    <script src="04_scope.js"></script>
 </body>
 </html>
