--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- <script src="01_function.js"></script> -->
     <!-- <script src="02_short_js_program.js"></script> -->
     <!-- <script src="03_undefined_notdefined.js"></script> -->
-    <script src="04_scope.js"></script>
+    <!-- <script src="04_scope.js"></script> -->
+    <!-- <script src="05_let_const.js"></script> -->
+    <!-- <script src="06_blockscope_shadowing.js"></script> -->
+    <script src="07_closures.js"></script>
 </body>
 </html>
